fixed spacing bug for action buttons

--- a/ktmineBootstrap/ktmineBootstrap/Content/less/ktMINE.less
+++ b/ktmineBootstrap/ktmineBootstrap/Content/less/ktMINE.less
@@ -155,7 +155,7 @@
 		.infoFooter
 		{
 			padding: 10px;
-			color: @grayLight;
+			color: @ktGray3;
 		}
 	}
 
@@ -229,17 +229,13 @@
 	height: 14px;
 	line-height: 14px;
 	vertical-align: text-top;
+	padding-right: 5px;
 	background-image: url("../images/ktIcon.png");
 	background-position: 14px 14px;
 	background-repeat: no-repeat;
 }
 
 //Icon sprite classes
-.ktWarningOn
-{ 
-	background-position: 0 0;
-} 
-.ktWarningOff
-{ 
-	background-position: 0 -19px;
-}
+.ktFavstar{ background-position: 0 0; } 
+.ktWarningOn{ background-position: 0 -19px; } 
+.ktWarningOff{ background-position: 0 -38px; } 
